# Cobotium-cli

./: README.md  cargo.toml  config.json  
cli/: Cargo.toml  cargo.toml
cli/src/: cargo.toml  main.rs
cobotium-program/: Cargo.toml
cobotium-program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
cobotium-program/test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
cobotium-program/test-ledger/rocksdb.failed/: IDENTITY  LOG
cobotium-program/{ledger_location}/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
cobotium-program/{ledger_location}/rocksdb.failed/: IDENTITY  LOG
cobotium/cli/: Cargo.toml
cobotium/cobotium/program/: Cargo.toml
cobotium/cobotium/program/src/: lib.rs
cobotium/program/: Cargo.toml
cobotium/program/src/: lib.rs
docs/: MAINNET_DEPLOYMENT.md  MONITORING.md  README.md
monitoring/: README.md  monitor.js  package.json  setup.sh
program/src/: cargo.toml  lib.rs
sdk/: cargo.toml
sdk/src/: lib.rs
validator/: Cargo.toml
validator/src/: main.rs
website/: 404.html  README.md  index.html  test.html  vercel.json
website/assets/css/: styles.css
website/assets/js/: main.js
website/docs/: deployment.html  index.html  monitoring.html  styles.css
