[package]
name = "cobotium-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for interacting with the Cobotium blockchain"

[dependencies]
clap = { version = "=3.2.25", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
solana-program = "1.17.11"
solana-client = "1.17.11"
solana-sdk = "1.17.11"
shellexpand = "2"
borsh = "0.10.3"
borsh-derive = "0.10.3"
cobotium-sdk = { path = "../sdk" }
cobotium-program = { path = "../cobotium-program", features = ["no-entrypoint"] }
anyhow = "1.0"